--- a/app/src/main/res/values-ar-rYE/strings.xml
+++ b/app/src/main/res/values-ar-rYE/strings.xml
@@ -10,13 +10,13 @@
     <string name="remember_me">تذكرنى</string>
     <string name="forget_password">هل نسيت كلمة المرور ؟</string>
     <string name="login">دخول</string>
-    <string name="يo_not_have_account">لا تمتلك حساب ؟</string>
+    <string name="do_not_have_account">لا تمتلك حساب ؟ سجل من هنا</string>
     <string name="sign_up_here">سجل من هنا</string>
     <string name="name">الاسم</string>
     <string name="date_of_birth">تاريخ الميلاد</string>
     <string name="email">الايميل</string>
     <string name="blood_type">فصيلة الدم</string>
-    <string name="last_donation_date">اخر تاريخ للتبرع</string>
+    <string name="last_donation_date">اخر تاريخ التبرع</string>
     <string name="governorate">المحافظة</string>
     <string name="city">المدينة</string>
     <string name="password_confirmation">تاكيد كلمة المرور</string>
@@ -33,4 +33,13 @@
     <string name="more">خيارات</string>
     <string name="tab_donation_orders">طلبات التبرع</string>
     <string name="tab_articles">مقالات</string>
+    <string name="age">العمر</string>
+    <string name="number">عدد الأكياس</string>
+    <string name="hospital_address">عنوان المستشفى</string>
+    <string name="donation_order">طلب تبرع</string>
+    <string name="phone_number">رقم الهاتف</string>
+    <string name="note">ملاحظات</string>
+    <string name="choose_governorate">اختر المحافظة</string>
+    <string name="choose_blood_type">اختر فصيلة الدم</string>
+    <string name="choose_city">اختر المدينة</string>
 </resources>
