--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,9 @@
     <string name="remember_me">Remember me</string>
     <string name="forget_password">Forget password ?</string>
     <string name="login">Login</string>
-    <string name="يo_not_have_account">Don’t have an account ?</string>
+    <string name="do_not_have_account">Don’t have an account ? Register here</string>
     <string name="sign_up_here">register here</string>
-    <string name="name">name</string>
+    <string name="name">Name</string>
     <string name="email">Email</string>
     <string name="date_of_birth">Date of birth</string>
     <string name="blood_type">Blood type</string>
@@ -32,5 +32,14 @@
     <string name="more">more</string>
     <string name="tab_donation_orders">Donation Orders</string>
     <string name="tab_articles">Articles</string>
+    <string name="age">Age</string>
+    <string name="number">Number</string>
+    <string name="hospital_address">Hospital Address</string>
+    <string name="donation_order">Donation Order</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="note">Note</string>
+    <string name="choose_governorate">Choose governorate</string>
+    <string name="choose_blood_type">Choose blood type</string>
+    <string name="choose_city">Choose city</string>
 
 </resources>
